[package]
name = "det-set"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
lalrpop-util = { version = "0.20.2", features = ["lexer", "unicode"] }
clap = { version = "3.2.25", features = ["derive"] }
numeric-sort = "0.1.0"
num-rational = "0.4.1"
graph6-rs = "0.2.1"
num_cpus = "1.16.0"
petgraph = "0.6.3"
dotenv = "0.15.0"
z3 = "0.12.1"

[build-dependencies]
lalrpop = "0.20.2"
